--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,7 +1,7 @@
 {
-  "landing_main_title": "اشتر بيتكوين وأكثر من 60 عملة رقمية",
+  "landing_main_title": "اشتر بيتكوين والعديد من العملات الرقمية",
   "landing_sub_title": "ابدأ في غضون دقائق",
-  "landing_join": "انضم إلى أكبر منصة عربية لتداول العملات الرقمية",
+  "landing_join": "إنضم إلينا لتداول العملات الرقمية",
   "landing_join_holder": "البريد الالكترونى",
   "landing_start_now": "ابدأ الان",
   "ways_title": "أبسط طريقة لتداول العملات الرقمية",
@@ -15,7 +15,7 @@
   "way_three_content": "الإيداع والتداول بالدرهم الإماراتي و الريال السعودي ابدأ بشراء وبيع وتبديل أكثر من 60 عملة رقمية في أي وقت ومكان",
   "way_four_content": "الإيداع والتداول بالدرهم الإماراتي و الريال السعودي ابدأ بشراء وبيع وتبديل أكثر من 60 عملة رقمية في أي وقت ومكان",
   "get_started_title": "ابدأ معنا فى دقائق",
-  "get_started_subtitle": "اوتكس تعتبر افضل واكثر منصة موثوقة لتداول العملات المشفرة",
+  "get_started_subtitle": "تتميز منصة أوتكس بالأمان والسرعة وخدمات التداول المتعددة",
   "Details": "التفاصيل",
   "otix_Lite": "لايت",
   "products_details": "شراء وبيع وتبديل أكثر من60 عملة رقمية بسرعة وسهولة مع 0% رسوم ",
@@ -23,17 +23,17 @@
   "Learn_More": "اقرأ المزيد",
   "Start_Now": "ابدأ الأن",
   "products_title": "منتجاتنا وخدماتنا",
-  "products_subTitle": "توفر اوتكس أدوات تداول واستثمار سهلة الاستخدام",
+  "products_subTitle": " تتميز منتجات وخدمات منصة أوتكس بأعلى معايير الأمان، سهولة التصميم، و تعدد الخيارات المتاحة. ",
   "our_mission_title": "مهمتنا",
   "get_started_btn": "ابدا الان",
-  "get_started_register": "تسجيل الدخول",
-  "get_started_register_desc": "قم بتسجيل الدخول بسهولة لانشاء حسابك",
-  "get_started_verfiy": "التوثيق",
-  "get_started_verify_desc": "قم بتوثيق حسابك بكل سهولة وامان معنا",
-  "get_started_deposit": "الإيداع",
-  "get_started_deposit_desc": "اودع اموالك بامان من خلال خياراتنا الموثوقة والمضمونة",
-  "get_started_buy": "التداول",
-  "get_started_buy_desc": "قم بشراء وبيع العملات المشفرة بسهولة وامان فى اي وقت وفى اي مكان",
+  "get_started_register": "إشترك",
+  "get_started_register_desc": "قم بالإشتراك للحصول على حساب في منصة أوتكس",
+  "get_started_verfiy": "وثق",
+  "get_started_verify_desc": "قم بتوثيق حسابك بكل سهولة وأمان معنا",
+  "get_started_deposit": "إودع",
+  "get_started_deposit_desc": "إودع أموالك بأمان من خلال خياراتنا الموثوقة والمضمونة",
+  "get_started_buy": "تداول",
+  "get_started_buy_desc": "قم بشراء وبيع العملات الرقمية بسهولة وأمان فى أي وقت وفى أي مكان",
   "coin_1":"بيتكوين",
   "coin_2":"ايثريوم",
   "coin_3":"اكس ار بي",
@@ -49,24 +49,24 @@
   "about_us": "من نحن",
   "about_subtitle": "اوتكس أكبر وأكثر منصة موثوقة في المنطقة",
   "about_content_title": "صرافة أوتكس",
-  "about_content_desc": "يقع المقر الرئيسي لشركة أوتكس في ليتوانيا، وقد تأسست في عام 2022 وتعتبر واحدة من أكثر منصات العملات المشفرة الموثوقة التي تغطي المستخدمين في جميع أنحاء العالم حيث أنها مصرح بها من قبل دائرة التحقيق في الجرائم المالية وهي ملتزمة بالامتثال للقوانين المعمول بها حيث تعمل. أوتكس  واحدة من أفضل المنصات لشراء وبيع العملات المشفرة عبر الإنترنت بسبب خدمتنا الممتازة، والرسوم المنخفضة، وخيارات التمويل متعددة الاستخدامات ومعايير الأمان الصارمة، لمنح الأشخاص الوسائل المناسبة للاستثمار السريع والآمن في المساحة. نحن مكرسون لجعل العملات المشفرة متاحة للعالم وتمكين الناس من جميع أنحاء العالم من الاستثمار بشكل مستقل. توفر أوتكس خدمات تبادل العملات المشفرة والمحفظة امتثالاً لقوانين ولوائح مكافحة غسل الأموال ومكافحة تمويل الإرهاب (AML/CFT).",
+  "about_content_desc": " شركة أوتكس إكشنج المحدودة  (Otix Exchange) هي شركة متخصصة في تبادل العملات الرقمية، حيث أنها توفر العديد من خدمات التداول داخل المنصة والتي تغطى جميع خدمات و إحتياجات المستخدمين في جميع أنحاء العالم، كما أن شركة أوتكس حاصلة على رخصة من قبل خدمة التحقيق في الجرائم المالية (FCIS)، فهي توفر خدمات صرف العملات الرقمية ومحفظة العملات الرقمية وفقًا لقوانين ولوائح مكافحة غسل الأموال ومكافحة تمويل الإرهاب (AML / CFT). كما تمتاز أوتكس كونها مرخصة في تقديم أفضل الخدمات للتداول في العملات الرقمية وذلك من خلال شبكة الإنترنت.",
   "our_mission_subtitle": "اوتكس أكبر وأكثر منصة موثوقة في المنطقة",
-  "our_mission_desc":"نهدف إلى تقديم البنية التحتية الأكثر أمانًا وتنظيمًا في تداول العملات المشفرة لعملاء التجزئة والمؤسسات في جميع أنحاء العالم. نحن نقدم سيولة استثنائية وأسعارًا تنافسية لجميع أسواقنا حتى تتمكن من تحقيق أهدافك الاستثمارية بسرعة وثقة. سواء كنت تاجرًا متقدمًا أو مبتدئًا في العملات المشفرة، تمنحك أوتكس القدرة على رسم المسار المالي الخاص بك",
+  "our_mission_desc": "نهدف إلى تقديم البنية التحتية الأكثر أمانًا وتنظيمًا في تداول العملات الرقمية لعملائنا من المؤسسات والأفراد في جميع أنحاء العالم. حيث أننا نقدم خدمات إستثنائية وأسعارًا تنافسية لجميع عملائنا حتى يتمكنوا من تحقيق أهداف الاستثمار بسرعة وثقة، سواء كنت متداول محترف أو مبتدئ في العملات الرقمية، سوف تمنحك أوتكس القدرة على رسم المسار المالي الخاص بك.",
   "our_vision_title": "رؤيتنا",
-"our_vision_desc": "تتمثل رؤيتنا في أن نكون منصة العملات المشفرة الرائدة القابلة للتداول في جميع أنحاء العالم. منح عملائنا الخدمة الكاملة الأكثر أمانًا وموثوقية لمشغل تبادل العملات الافتراضي ومنصة مشغل تبادل العملات الافتراضية حيث نعتقد أن العملات المشفرة ستكون البنية الأساسية لنظام مالي رقمي جديد",
-"tareding_volume": "24 ساعة / حجم التداول",
-"change": "24 ساعة / التغيير",
-"about_title": "من نحن",
-"about_subtitle": "اوتكس أكبر وأكثر منصة موثوقة في المنطقة",
-"btn_title": "اتصل بنا",
-"aml_title": "سياسة الامتثال و مكافحة غسل الأموال",
-"aml_subtitle": "لم تتوانى دولة الإمارات العربية المتحدة عن تحديد التزامها الأكيد بأداء دورها الفعال في المعركة القائمة لمكافحة غسيل الأموال وتمويل الأنشطة الإرهابية",
-"aml_content": "لم تتوانى دولة الإمارات العربية المتحدة عن تحديد التزامها الأكيد بأداء دورها الفعال في المعركة القائمة لمكافحة غسيل الأموال وتمويل الأنشطة الإرهابية، من خلال إرساء واعتماد نظام تشريعي من شأنه تعريف وتحديد تلك الأنشطة والأعمال التي ترقى إلى مستوى غسيل الأموال والأنشطة الإرهابية، وإدانة وتجريم كافة هذه الأنشطة. قبل القيام بفتح حساب على (بِت أُواسيس BitOasis) وإجراء تقييم لمنصة (بِت أُواسيس BitOasis)، فإن (بِت أُواسيس BitOasis) تباشر إجراءً إلزامياً في التحقق من هوية كافة العملاء، وكذلك معاينة ومطابقة اسم كل عميل مع القوائم السوداء، ولوائح العقوبات المحلية والدولية، وقوائم الشخصيات السياسية البارزة (PEP)،  ووسائل الإعلام السلبية. ولن تبخل (بِت أُواسيس BitOasis) بأي جهد في التقيد التام والدقيق بإجراءات وإرشادات اعرف عميلك / العناية الواجبة الخاصة بالعميل. بما في ذلك كافة الإجراءات اللازمة التي من شأنها ضمان أن عملائها هم أشخاص حقيقيون، والقيام بتحديد والحد من مخاطر غسل الأموال وتمويل الإرهاب (AML-CFT)، والجرائم المالية الأخرى، بالشكل الدقيق والملائم.",
-"blog_title": "المقالات",
-"blog_subtitle": "المقالات الخاصة بنا",
-"faq_title": "الأسئلة الأكثر شيوعاً",
-"faq_subtitle": "الأسئلة الأكثر شيوعاً",
-"code_of_ethics": "Code of Ethics ",
+  "our_vision_desc": " تتمثل رؤيتنا في أن نكون منصة العملات الرقمية الرائدة القابلة للتداول في جميع أنحاء العالم. فنحن نسعى لتزويد عملائنا بخدمات كاملة ومتعددة تمتاز بالأمان والثقة، للمتداولين والمستثمرين الراغبين في تداول العملات الرقمية، حيث نعتقد أن العملات الرقمية هي من أهم الخدمات في النظام المالي الجديد.",
+  "tareding_volume": "24 ساعة / حجم التداول",
+  "change": "24 ساعة / التغيير",
+  "about_title": "من نحن",
+  "about_subtitle": "اوتكس أكبر وأكثر منصة موثوقة في المنطقة",
+  "btn_title": "اتصل بنا",
+  "aml_title": "سياسة الامتثال و مكافحة غسل الأموال",
+  "aml_subtitle": "لم تتوانى دولة الإمارات العربية المتحدة عن تحديد التزامها الأكيد بأداء دورها الفعال في المعركة القائمة لمكافحة غسيل الأموال وتمويل الأنشطة الإرهابية",
+  "aml_content": "لم تتوانى دولة الإمارات العربية المتحدة عن تحديد التزامها الأكيد بأداء دورها الفعال في المعركة القائمة لمكافحة غسيل الأموال وتمويل الأنشطة الإرهابية، من خلال إرساء واعتماد نظام تشريعي من شأنه تعريف وتحديد تلك الأنشطة والأعمال التي ترقى إلى مستوى غسيل الأموال والأنشطة الإرهابية، وإدانة وتجريم كافة هذه الأنشطة. قبل القيام بفتح حساب على (بِت أُواسيس BitOasis) وإجراء تقييم لمنصة (بِت أُواسيس BitOasis)، فإن (بِت أُواسيس BitOasis) تباشر إجراءً إلزامياً في التحقق من هوية كافة العملاء، وكذلك معاينة ومطابقة اسم كل عميل مع القوائم السوداء، ولوائح العقوبات المحلية والدولية، وقوائم الشخصيات السياسية البارزة (PEP)،  ووسائل الإعلام السلبية. ولن تبخل (بِت أُواسيس BitOasis) بأي جهد في التقيد التام والدقيق بإجراءات وإرشادات اعرف عميلك / العناية الواجبة الخاصة بالعميل. بما في ذلك كافة الإجراءات اللازمة التي من شأنها ضمان أن عملائها هم أشخاص حقيقيون، والقيام بتحديد والحد من مخاطر غسل الأموال وتمويل الإرهاب (AML-CFT)، والجرائم المالية الأخرى، بالشكل الدقيق والملائم.",
+  "blog_title": "المقالات",
+  "blog_subtitle": "المقالات الخاصة بنا",
+  "faq_title": "الأسئلة الأكثر شيوعاً",
+  "faq_subtitle": "الأسئلة الأكثر شيوعاً",
+  "code_of_ethics": "Code of Ethics ",
   "p1": "",
   "p2": "The Company provides the trust and confidence that our employees, customers, and stakeholders have in us. We gain credibility by keeping our promises, acting with honesty and integrity, and achieving company goals solely through honorable behavior. We don't just say what we need to do; our actions match what we say",
   "p3": "When considering any action, we should ask ourselves, 'Will this build trust and credibility for  our company?' Will it contribute to the creation of a working environment that we can provide in the long term? Is the commitment I'm making one that I can keep? Only by answering 'yes' to those questions and working every day to build trust and credibility will we be able to maximize trust and credibility",
@@ -592,16 +592,15 @@
   "vip_subtitle": "انضم إلى برنامج العملاء المميزين في بت أويسس",
   "vip_btn_title": "انضم للبرنامج",
   "market": "السوق",
-  "ways_section_title": "اسهل طريقة لتداول العملات المشفرة",
-  "trade_with_your_currency": "تداول بسهولة بعملتك",
-  "AED_and_SAR_are_accepted_for_deposits_and_transactions": "تداول بسهولة بالدرهك الاماراتى والريال السعودى",
-  "largest_coins_available": "تداول غير محدود",
-  "trade_with_more_than_60_cryptocurrencies": "تداول باكثر من 60 عملة رقمية.",
-  "trading_pairings": "أكثر من 200 زوج تداول ، وأكثر من 60 مجموعة من الأصول المشفرة ، والمزيد في المستقبل.",
-  "safe_secure": "الامان والثقة",
-  "we_use_the_most_secure_solutions_available_to_store_your_cryptocurrency_in_cold_storage": "نستخدم الحلوول الاكثر امانا المتاحة لتخزين عملتك المشفرة باستخدام التخزين البارد.",
-  "rade_wherever_you_are": "تداول اينما كنت",
-  "with_our_android_and_ios_apps_you_can_trade_and_invest_while_on_the_go": "باستخدام تطبيق Android, iOS الخاص بنا يمكنك التداول والاستثمار فى اى مكان",
+  "ways_section_title": "اسهل طريقة لشراء وبيع العملات الرقمية",
+  "trade_with_your_currency": "تداول بعملتك",
+  "AED_and_SAR_are_accepted_for_deposits_and_transactions": "نحن ندعم العملات المختلفة للودائع والمعاملات.",
+  "largest_coins_available": "العملات الرقمية المتاحة",
+  "trade_with_more_than_60_cryptocurrencies": "تداول بالعديد من العملات الرقمية المختلفة..",
+  "safe_secure": "آمنة و موثوقة",
+  "we_use_the_most_secure_solutions_available_to_store_your_cryptocurrency_in_cold_storage": "نحن نستخدم الحلول الأكثر أمانًا لتخزين عملتك الرقمية بأمان 'Cold Storage'.",
+  "rade_wherever_you_are": "تداول أينما كنت",
+  "with_our_android_and_ios_apps_you_can_trade_and_invest_while_on_the_go": "من خلال منصتنا والتطبيقات الخاصة بنا ، يمكنك التداول والإستثمار في أي وقت و في كل مكان بسهولة و سرعة. ",
   "market_title": "السوق",
   "market_subtitle": "our market subtitle",
   "fees_flat_deposit": "الإيداع والسحب فيات",
@@ -685,6 +684,11 @@
   "google_play": "google play",
   "app_store": "app stpre",
   "pageTitle": "اوتكس اكشنج المحدودة - Otix Exchange",
-  "pageDescription": "شركة اوتكس اكشنج المحدودة (Otix Exchange) شركة متخصصة في تبادل العملات الرقمية كما تمتلك العديد من الخدمات داخل منصة التداول والتي تغطي جميع خدمات المستخدمين في جميع أنحاء العالم."
+  "pageDescription": "شركة اوتكس اكشنج المحدودة (Otix Exchange) شركة متخصصة في تبادل العملات الرقمية كما تمتلك العديد من الخدمات داخل منصة التداول والتي تغطي جميع خدمات المستخدمين في جميع أنحاء العالم.",
+  "product_otix_platform": "منصة أوتكس",
+  "product_otix_platform_desc": "أنشأت منصة أوتكس أقسامًا خاصة للتحكم في المخاطر الداخلية وعمليات التشغيل، من خلال تحديد معايير صارمة لتشغيل بيانات الإنتاج والإستخدام. حيث يتطلب مراجعة وموافقة متعددة المستويات لفحص وإستخدام جميع البيانات عبر الإنترنت، كما أنه ستخضع البيانات الأساسية للإختبار لضمان أقصى قدر من الأمان لبيانات المستخدم.",
+  "product_quick_trade": "التداول السريع",
+  "product_quick_trade_desc": "لست مضطرًا لأن تكون متداولًا محترفًا لشراء عملة رقمية، لأنك مع منصة التداول السريع في أوتكس، كل ما تحتاجه هو ثلاث نقرات فقط للشراء من أي مكان وفي أي وقت."
+
 
 }
