--- a/locales/en.json
+++ b/locales/en.json
@@ -15,7 +15,7 @@
   "link_register": "Sign up",
   "link_contact": "contact us",
   "about": "Headquartered in Lithuania, Otix is Established in 2022 and is considered one of the most trusted cryptocurrency platforms covering users around the world",
-  "our_mission_title": "our mission",
+  "our_mission_title": "Our Mission",
   "link_company_title": "company",
   "link_learning_title": "learning",
   "link_company_about": "about",
@@ -56,9 +56,9 @@
   "link_learn_supported_buy_ethereum": "Buy Ethereum",
   "link_learn_supported_buy_otix_token": "Buy OTIX Token",
   "link_otix_complaints_policy": "complaints policy",
-  "landing_main_title": "Buy Bitcoin and Over 60 Cryptocurrencies",
+  "landing_main_title": "Buy Bitcoin and many cryptocurrencies",
   "landing_sub_title": "Get started in minutes",
-  "landing_join": "Join the largest Arab platform for cryptocurrency trading",
+  "landing_join": "Join us for trading cryptocurrency",
   "landing_join_holder": "e-mail",
   "landing_start_now": "start now",
   "ways_title": "The simplest way to trade cryptocurrency",
@@ -71,7 +71,7 @@
   "way_two_content": "Deposit and trade with UAE dirham (AED) and Saudi riyal (SAR)",
   "way_three_content": "Deposit and trade with UAE dirham (AED) and Saudi riyal (SAR)",
   "way_four_content": "Deposit and trade with UAE dirham (AED) and Saudi riyal (SAR)",
-  "get_started_title": "Start in minutes with us",
+  "get_started_title": "Start with us In Minutes",
   "get_started_subtitle": "Otix Is the best and most trusted cryptocurrency exchange platform.",
   "Details": "Details",
   "Buy": "Buy",
@@ -81,22 +81,16 @@
   "Learn_More": "Learn More",
   "Start_Now": "Start Now",
   "products_title": "Our Products & Services",
-  "products_subTitle": "Otix is the largest and most trusted crypto platform in the region",
+  "products_subTitle": "Otix Exchange Platform Products & Services have the highest standards in secure and friendly UI.",
   "get_started_btn": "get started",
   "get_started_register": "Sign up",
-  "get_started_register_desc": "Signup to have an Otix account easily.",
-  "get_started_register_desc2": "Create an Otix account by registering",
-  "get_started_verfiy": "Validate / confirm",
+  "get_started_register_desc": "Sign up to have an Otix account.",
+  "get_started_verfiy": "Validate",
   "get_started_verify_desc": "Confirm your own identity with our trusted partners.",
-  "get_started_verify_desc2": "Check your identification with one of our reliable partners",
   "get_started_deposit": "Deposit",
   "get_started_deposit_desc": "Deposit your funds securely through our trusted & secured options.",
-  "get_started_deposit_desc2": "Deposit your funds safely using the methods we support",
-  "get_started_deposit_desc3": "Securely deposit your funds using the methods we support",
   "get_started_buy": "Buy",
   "get_started_buy_desc": "Buy & sell cryptocurrencies easily and safely anytime, anywhere.",
-  "get_started_buy_desc2": "At anytime, anywhere, buy & trade more than 60 cryptocurrencies",
-  "get_started_buy_desc3": "Buy and trade more than 60 cryptocurrencies wherever you are, at any time",
   "coin_1":"Bitcoin",
   "coin_2":"Ethereum",
   "coin_3":"XRP",
@@ -112,25 +106,25 @@
   "about_us": "who are we",
   "about_subtitle": "otix is the largest and most trusted platform in the region",
   "about_content_title": "OTX",
-  "about_content_desc": "Headquartered in Lithuania, Otix is Established in 2022 and is considered one of the most trusted cryptocurrency platforms covering users around the world as it is authorized by the Financial Crime Investigation Service and it`s committed to complying with the applicable laws where it operates. Otix is one of the best platforms to buy and sell crypto online because of our excellent service, low fees, versatile funding options and rigorous security standards, to give people the means to quickly and securely invest in the space. We are dedicated to making cryptocurrency available and accessible to the world and enabling people from all over the world to invest independently. Otix provides both cryptocurrency exchange and wallet services in compliance with anti-money laundering and Countering Financing of Terrorism (AML/CFT) laws and regulations",
+  "about_content_desc": "Otix Exchange UAB is a full-service of a virtual currency exchange operator and deposit virtual currency exchange operator platform covering users through otix.exchange, that is authorized by the Financial Crime Investigation Service (FCIS). It provides both cryptocurrency exchange and Digital Currency wallet services in compliance with anti-money laundering and Countering Financing of Terrorism (AML/CFT) laws and regulations.",
   "our_mission_subtitle": "otix is the largest and most trusted platform in the region",
-  "our_mission_desc": "We aim to offer the most secure and regulated infrastructure in cryptocurrency trading for retail and institutional clients across the world. We offer exceptional liquidity and competitive pricing for all our markets so you can achieve your investment goals quickly and confidently. Whether you’re an advanced trader or a crypto-beginner, Otix gives you the power to chart your own financial course",
+  "our_mission_desc": "We aim to offer the most secure and regulated infrastructure in cryptocurrency trading for retail and institutional clients across the world. We offer exceptional liquidity and competitive pricing for all our markets so you can achieve your investment goals quickly and confidently. Whether you’re an advanced trader or a crypto-beginner, Otix gives you the power to chart your own financial course.",
   "our_vision_title": "our vision",
-  "our_vision_desc": "Our vision is to be the leading tradable cryptocurrency platform all over the world. Provide our clients with the most secured and trusted full-service of a virtual currency exchange operator and deposit virtual currency exchange operator platform as we believe that cryptocurrencies will be the building blocks to a new digital financial system",
+  "our_vision_desc": "Our vision is to be the leading tradable cryptocurrency platform all over the world. Provide our clients with the most secured and trusted full-service of a virtual currency exchange operator and deposit virtual currency exchange operator platform as we believe that cryptocurrencies will be the building blocks to a new digital financial system.",
   "tareding_volume": "24H/Tareding Volume",
   "change": "24H/Change",
   "market": "market",
   "price": "price",
   "ways_section_title": "the easiest way to buy & sell cryptocurrencies",
   "trade_with_your_currency": "Trade with your currency",
-  "AED_and_SAR_are_accepted_for_deposits_and_transactions": "AED and SAR are accepted for deposits and transactions (SAR).",
-  "largest_coins_available": "largest coins available",
-  "trade_with_more_than_60_cryptocurrencies": "Trade with More than 60 cryptocurrencies.",
+  "AED_and_SAR_are_accepted_for_deposits_and_transactions": "We support different currencies for deposits and transactions.",
+  "largest_coins_available": "Coins available",
+  "trade_with_more_than_60_cryptocurrencies": "Trade with many different cryptocurrencies.",
   "trading_pairings": "200+ trading pairings, 60+ cryptoassets, and more to come",
   "safe_secure": "Safe & secure",
   "we_use_the_most_secure_solutions_available_to_store_your_cryptocurrency_in_cold_storage": "We use the most secure solutions available to store your cryptocurrency in cold storage.",
   "rade_wherever_you_are": "Trade wherever you are",
-  "with_our_android_and_ios_apps_you_can_trade_and_invest_while_on_the_go": "With our Android and iOS apps, you can trade and invest while on the go",
+  "with_our_android_and_ios_apps_you_can_trade_and_invest_while_on_the_go": "With our Android and IOS apps, you can trade and invest easily wherever you are, anytime.",
   "about_title": "about us",
   "aml_title": "AML Policy",
   "aml_subtitle": "The websites and the services offered are NOT addressed to persons who have their registered place of residence outside the MENA region",
@@ -776,5 +770,9 @@
   "google_play": "google play",
   "app_store": "app store",
   "pageTitle": "Otix Exchange",
-  "pageDescription": "Otix Exchange UAB is a full-service of a virtual currency exchange operator and deposit virtual currency exchange operator platform covering users through otix.exchange."
+  "pageDescription": "Otix Exchange UAB is a full-service of a virtual currency exchange operator and deposit virtual currency exchange operator platform covering users through otix.exchange.",
+  "product_otix_platform": "Otix Platform",
+  "product_otix_platform_desc": "Otix Exchange has established special internal risk control and operation process departments which have designated strict production data operation and usage standards. It requires multi-level review and approval to check and use all online data and the core data will undergo desensitization so as to ensure the maximum security for user data.",
+  "product_quick_trade": "Quick Trade",
+  "product_quick_trade_desc": "You don't have to be a professional trader to buy cryptocurrency, with Otix Quick Trade Platform, you just need three clicks to buy & sell anytime from anywhere."
 }
